--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 @theme {
   --animate-wiggle: wiggle 1s ease-in-out infinite;
   --font-kaisei: "Kaisei Opti", "serif";
+  
  
   
 }
@@ -21,4 +22,9 @@
 .scrollbar-hide {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;     /* Firefox */
+}
+
+
+.color-red{
+  background-color: #E15B5B;
 }
